--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
      <meta name="author" content="Tooplate">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-     <link rel="stylesheet" href="css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/all.min.css">
-     <link rel="stylesheet" href="css/ow1.carousel.min.css">
-     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+     <link rel="stylesheet" href="bootstrap.min.css">
+     <link rel="stylesheet" href="all.min.css">
+     <link rel="stylesheet" href="ow1.carousel.min.css">
+     <link rel="stylesheet" href="owl.theme.default.min.css">
 
      <!-- MAIN CSS -->
-     <link rel="stylesheet" href="css/tooplate-ben-resume-style.css">
+     <link rel="stylesheet" href="tooplate-ben-resume-style.css">
 
 <style type="text/css">
 @font-face {
@@ -74,7 +74,7 @@
          <div class="container">
             <div class="row">
                   <div right="mx-auto col-lg-5 col-md-5 col-10">
-                      <img src="images/4.jpg" class="img-fluid" alt="Ben Resume HTML Template">
+                      <img src="4.jpg" class="img-fluid" alt="Ben Resume HTML Template">
                   </div>
 
                    <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
@@ -113,7 +113,7 @@
                 </div>
 
                 <div class="col-lg-5 mx-auto col-md-6 col-12">
-                    <img src="images/1.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template">
+                    <img src="1.jpg" class="about-image img-fluid" alt="Ben's Resume HTML Template">
                 </div>
 
            
@@ -195,11 +195,11 @@
       </div>
     </section>
      <!-- SCRIPTS -->
-     <script src="js/jquery.min.js"></script>
-     <script src="js/bootstrap.min.js"></script>
-     <script src="js/smoothscroll.js"></script>
-     <script src="js/owl.carousel.min.js"></script>
-     <script src="js/custom.js"></script>
+     <script src="jquery.min.js"></script>
+     <script src="bootstrap.min.js"></script>
+     <script src="smoothscroll.js"></script>
+     <script src="owl.carousel.min.js"></script>
+     <script src="custom.js"></script>
 
 
 <div id="loom-companion-mv3" ext-id="liecbddmkiiihnedobmlmillhodjkdmb"><section id="shadow-host-companion"></section></div></body></html>
