заменила на заглавну букву в заголовке

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en"><head>
 
-     <title>qaingineer - канзас</title>
+     <title>qaingineer - Канзас</title>
 
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -19,7 +19,7 @@
 
 <style type="text/css">
 @font-face {
-  font-weight: 400;
+  font-weight: 500;
   font-style:  normal;
   font-family: circular;
 
@@ -79,7 +79,7 @@
 
                    <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
                         <div class="hero-text">               
-                            <h1 class="hero-title">😊 Привет, меня зовут Ильяна, и я - QA Engineer</h1>
+                            <h1 class="hero-title">😎 Привет, меня зовут Ильяна, и я - QA Engineer</h1>
                         
                             <a href="mailto:ilyana.smet@yandex.ru" class="email-link">
                                 ilyana.smet@yandex.ru
